feature/endpoint-transactions-for-the-period
